# vmea

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: pylint.yml
docs/: COMMANDS.md  CONFIGURATION.md  CUSTOMIZING_LLM_INSTRUCTIONS.md  DEVELOPMENT.md  GETTING_STARTED.md  TROUBLESHOOTING.md  USE_CASES.md
docs/diagrams/: README.md  core-data-model-class-diagram.md  data-flow-pipeline-diagram.md  export-decision-flowchart.md  export-sequence-diagram.md  transcript-source-priority-diagram.md
src/vmea/: __init__.py  cleanup.py  cli.py  config.py  discovery.py  ollama.py  parser.py  state.py  transcribe.py  writer.py
tests/: __init__.py  conftest.py  test_cleanup.py  test_cli.py  test_config.py  test_discovery.py  test_ollama.py  test_parser.py  test_state.py  test_writer.py
