[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vmea"
version = "0.1.0"
description = "Voice Memo Export Automation – Export Apple Voice Memos to Obsidian/Logseq Markdown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Kevin Lappe" }
]
keywords = ["voice-memos", "obsidian", "markdown", "macos", "pkm", "logseq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tomli-w>=1.0.0",
    "watchdog>=4.0.0",
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
llm = [
    "ollama>=0.3.0",
]
transcribe = [
    "openai-whisper>=20231117",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[project.scripts]
vmea = "vmea.cli:app"

[project.urls]
Homepage = "https://github.com/klappe-pm/Apple-Voice-Memo-Export-to-Markdown"
Repository = "https://github.com/klappe-pm/Apple-Voice-Memo-Export-to-Markdown"
Issues = "https://github.com/klappe-pm/Apple-Voice-Memo-Export-to-Markdown/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vmea"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["vmea"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/vmea"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
